K1J-405: Some cleanup and structuring of BaseUserDetailsService